--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
 
+  <!-- <script src="build/bundle.js"></script> -->
+
 </body>
 </html>
