--- a/app/99common/navbar.html
+++ b/app/99common/navbar.html
@@ -15,10 +15,25 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <!-- Single button -->
+        <!-- <div class="btn-group" uib-dropdown >1122112121
+          <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
+            Button dropdown <span class="caret"></span>
+          </button>
+          <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
+            <li role="menuitem"><a href="#">Action</a></li>
+            <li role="menuitem"><a href="#">Another action</a></li>
+            <li role="menuitem"><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li role="menuitem"><a href="#">Separated link</a></li>
+          </ul>
+        </div> -->
+
       <ul class="nav navbar-nav">
 
-        <li class="dropdown" >
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 消票 <span class="caret"></span></a>
+        <li class="dropdown" uib-dropdown>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 消票11 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a ui-sref="app.ticketinput">验票</a></li>
             <li><a ui-sref="app.ticketlist">列表</a></li>
@@ -31,7 +46,7 @@
       </ul>
 
       <a href="manager/logout" class="btn btn-danger navbar-btn navbar-right">
-        Sign out
+        Sign out123
       </a>
 
     </div><!-- /.navbar-collapse -->
