--- a/app/99common/navbar.html
+++ b/app/99common/navbar.html
@@ -33,13 +33,15 @@
       <ul class="nav navbar-nav">
 
         <li class="dropdown" uib-dropdown>
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 消票11 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> 消票 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a ui-sref="app.ticketinput">验票</a></li>
             <li><a ui-sref="app.ticketlist">列表</a></li>
             <!-- <li><a ui-sref="app.ticketlist">使用情况</a></li> -->
           </ul>
         </li>
+
+        
 
         
 
