--- a/app/99common/app.html
+++ b/app/99common/app.html
@@ -40,13 +40,14 @@
 		    <li class="dropdown" uib-dropdown >
 		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 文档 <span class="caret"></span></a>
 		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-	            <li><a 
+		      <li><a ui-sref="app.doccreate">创建接口文档</a></li>
+		      	<li role="separator" class="divider"></li>
+	            <li>
+	            <a 
 	            ui-sref="app.doc({type : 'ticket_destory'})"
 	            >消票</a></li>
 	            <li><a ui-sref="app.doc({type : 444})">设备</a></li>
 	            <li><a ui-sref="app.doc({type : 555})">文档</a></li>
-	            <!-- <li><a ui-sref="app.device">设备</a></li>
-	            <li><a ui-sref="app.doc">文档</a></li> -->
 		      </ul>
 		    </li>
 
