--- a/app/99common/app.html
+++ b/app/99common/app.html
@@ -40,7 +40,7 @@
 		    <li class="dropdown" uib-dropdown >
 		      <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 文档 <span class="caret"></span></a>
 		      <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
-		      <li><a ui-sref="app.docname">创建接口文档</a></li>
+		      	<li><a ui-sref="app.docname">创建接口文档</a></li>
 		      	<li role="separator" class="divider"></li>
 	            <li>
 	            <a 
@@ -66,11 +66,13 @@
 <section>
     <div ui-view="" class="content-wrapper"></div>
 </section>
+
 <!-- Page footer-->
-<footer >
+<!-- <footer >
+
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 	  <div class="container-fluid text-center mt15">
 	    <span class="glyphicon glyphicon-heart"></span> from 慧鼎商务
 	  </div>
 	</nav>
-</footer>
+</footer> -->
