--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World app</title>
+    <title>居游</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" >
   </head>
-  <body ng-app="juyouApp">
+  <!-- <body ng-app="juyouApp"> -->
+  <body>
 	<div ui-view></div>
 
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
