--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>居游</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" >
   </head>
-  <!-- <body ng-app="juyouApp"> -->
-  <body>
+  <body ng-app="juyouApp">
+  <!-- <body> -->
 	<div ui-view></div>
 
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
