--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>居游</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" >
   </head>
-  <body ng-app="juyouApp">
-  <!-- <body> -->
+  <!-- <body ng-app="juyouApp"> -->
+  <body>
 	<div ui-view></div>
 
+  <script src="http://cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
 
