--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <body>
 	<div ui-view></div>
 
-  <script src="http://cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
 
-  <!-- <script src="build/bundle.js"></script> -->
 
 </body>
 </html>
