--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 	<div ui-view></div>
 
-  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
 
