--- a/app/15custservice/user/cardA.html
+++ b/app/15custservice/user/cardA.html
@@ -3,8 +3,8 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                <label>红包码</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.giftcode" >
+                <label>物理卡号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.cardnum" placeholder="请输入物理卡号">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
@@ -16,19 +16,18 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="text-center">红包码</th>
+        <th class="text-center">物理卡号</th>
+        <th class="text-center">物理卡密</th>
+        <th class="text-center">物理卡内号</th>
         <th class="text-center">使用状态</th>
-        <th class="text-center">使用电话</th>
-        <th class="text-center">发送金额</th>
-        <th class="text-center">发送时间</th>
+      </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.giftcode}}</td>
+        <td class="text-center">{{obj.cardnum}}</td>
+        <td class="text-center">{{obj.cardpass}}</td>
+        <td class="text-center">{{obj.phycardinside}}</td>
         <td class="text-center">{{obj.state}}</td>
-        <td class="text-center">{{obj.mobile}}</td>
-        <td class="text-center">{{obj.money | currency : '￥'}}</td>
-        <td class="text-center">{{obj.sendtime}}</td>
       </tr>
     </tbody>
   </table>
