--- a/app/15custservice/user/infoticket.html
+++ b/app/15custservice/user/infoticket.html
@@ -4,7 +4,7 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
                 <label>手机号</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.mobile" >
+                <input type="text" class="form-control" ng-model="searchform.mobile" placeholder="请输入手机号">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
@@ -16,10 +16,10 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">订单编号</th>
-        <th class="col-md-7 text-center">票种名称</th>
-        <th class="col-md-1 text-center">使用状态</th>
-        <th class="col-md-2 text-center">出票时间</th>
+        <th class="col-md-3 text-center">订单编号</th>
+        <th class="col-md-5 text-center">票种名称</th>
+        <th class="col-md-2 text-center">使用状态</th>
+        <th class="col-md-3 text-center">出票时间</th>
       </tr>
     </thead>
     <tbody>
