--- a/app/15custservice/user/redpackage.html
+++ b/app/15custservice/user/redpackage.html
@@ -4,7 +4,7 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
                 <label>红包码</label>&nbsp;&nbsp;
-                <input type="text" class="form-control" ng-model="searchform.giftcode" >
+                <input type="text" class="form-control" ng-model="searchform.giftcode" placeholder="请输入红包码">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
