--- a/app/15custservice/user/redpackage.html
+++ b/app/15custservice/user/redpackage.html
@@ -6,6 +6,9 @@
                 <label>红包码</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.giftcode" placeholder="请输入红包码">
                 &nbsp;&nbsp;&nbsp;&nbsp;
+                <label>手机号</label>&nbsp;&nbsp;
+                <input type="text" class="form-control" ng-model="searchform.mobile" placeholder="请输入手机号">
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
         </div>
@@ -17,17 +20,17 @@
     <thead>
       <tr>
         <th class="text-center">红包码</th>
-        <th class="text-center">使用状态</th>
-        <th class="text-center">使用电话</th>
+        <th class="text-center">手机号</th>
         <th class="text-center">发送金额</th>
+        <th class="text-center">使用状态</th>
         <th class="text-center">发送时间</th>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.giftcode}}</td>
-        <td class="text-center">{{obj.state}}</td>
         <td class="text-center">{{obj.mobile}}</td>
         <td class="text-center">{{obj.money | currency : '￥'}}</td>
+        <td class="text-center">{{obj.state}}</td>
         <td class="text-center">{{obj.sendtime}}</td>
       </tr>
     </tbody>
