--- a/app/15custservice/user/edituserinfo.html
+++ b/app/15custservice/user/edituserinfo.html
@@ -18,12 +18,44 @@
 		</div>
 	</div>
 
+	<button 
+    type="button" 
+    class="btn btn-primary btn-lg btn-block" 
+    ng-click="gogo()"
+    >
+    提交
+    </button><br>
+
+	<div class="form-group">
+		<label class="col-xs-2 control-label">通用补贴</label>
+		<div class="col-xs-6">
+			<div class="input-group">
+				<span class="input-group-addon">¥</span>
+				<input type="number" class="form-control" min='0'
+				ng-model="objt.generalsubsidy"
+				>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-xs-2 control-label">政府补贴</label>
+		<div class="col-xs-6">
+			<div class="input-group">
+				<span class="input-group-addon">¥</span>
+				<input type="number" class="form-control" min='0'
+				ng-model="objt.hdticketsubsidy"
+				>
+			</div>
+		</div>
+	</div>
+
 	
 
 	<button 
     type="button" 
     class="btn btn-primary btn-lg btn-block" 
-    ng-click="gogo()"
+    ng-click="xoxo()"
     >
     提交
     </button>
