--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="renderer" content="webkit">
     <title>居游</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" >
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" >
+    
   </head>
   <!-- <body ng-app="juyouApp"> -->
   <body>
