--- a/app/15custservice/user/userinfo.html
+++ b/app/15custservice/user/userinfo.html
@@ -33,13 +33,13 @@
 	      <tr>
 	        <td class="text-center">{{obj.username}}</td>
 	        <td class="text-center">{{obj.mobile}}</td>
-	        <td class="text-center">{{obj.jycardno}}</td>
+	        <td class="text-center">{{obj.papersno}}</td>
 	        <td class="">{{obj.postaddress}}</td>
 	        <td class="text-center">{{obj.state}}&nbsp;&nbsp;&nbsp;<a ng-click="clear(obj.mobile)" class="btn btn-info btn-xs">清空</a></td>
 	        <td class="text-center">{{obj.generalsubsidy | currency : '￥'}}</td>
 	        <td class="text-center">{{obj.hdticketsubsidy | currency : '￥'}}</td>
-	        <td class="text-center">{{obj.digitalcardno}}</td>
 	        <td class="text-center">{{obj.phycardno}}</td>
+	        <td class="text-center">{{obj.digitalcardno}}</td>
 	        <td class="text-center">
 	        	<a ng-click="edit(obj.mobile)" class="btn btn-success btn-xs">编辑</a>
 	        </td>
