--- a/app/16notice/notice/noticemodel.html
+++ b/app/16notice/notice/noticemodel.html
@@ -12,9 +12,10 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">公告内容</label>
 		<div class="col-xs-6">
-			<textarea class="form-control" rows="15"
+			<!--<textarea class="form-control" rows="15"
 			ng-model="objt.content"
-			></textarea>
+			></textarea>-->
+			<div text-angular ng-model="objt.content"></div>
 		</div>
 	</div>
 
