--- a/app/15custservice/user/userinfo.html
+++ b/app/15custservice/user/userinfo.html
@@ -21,8 +21,8 @@
         <th class="col-md-1 text-center">身份证号</th>
         <th class="col-md-2 text-center">地址</th>
         <th class="col-md-2 text-center">实名制</th>
-        <th class="col-md-1 text-center">通用补贴</th>
         <th class="col-md-1 text-center">政府补贴</th>
+        <th class="col-md-1 text-center">慧鼎补贴</th>
         <th class="col-md-1 text-center">物理卡号</th>
         <th class="col-md-1 text-center">电子卡号</th>
         <th class="col-md-1 text-center">操作</th>
