--- a/app/15custservice/user/edituserinfo.html
+++ b/app/15custservice/user/edituserinfo.html
@@ -27,7 +27,7 @@
     </button><br>
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">通用补贴</label>
+		<label class="col-xs-2 control-label">政府补贴</label>
 		<div class="col-xs-6">
 			<div class="input-group">
 				<span class="input-group-addon">¥</span>
@@ -39,7 +39,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">政府补贴</label>
+		<label class="col-xs-2 control-label">慧鼎补贴</label>
 		<div class="col-xs-6">
 			<div class="input-group">
 				<span class="input-group-addon">¥</span>
