--- a/app/15custservice/user/userinfo.html
+++ b/app/15custservice/user/userinfo.html
@@ -2,11 +2,14 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="form-group form-inline">
-            <div class="col-sm-12">
+            <div class="col-sm-10">
                 <label>手机号</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.mobile" placeholder="请输入手机号">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+            </div>
+            <div class="col-sm-2 text-right">
+                <button type="button" class="btn btn-info new" ng-click="create()">实名认证</button>
             </div>
         </div>
     </div>
