--- a/app/15custservice/user/orderback.html
+++ b/app/15custservice/user/orderback.html
@@ -10,7 +10,7 @@
    	    <label class="col-xs-1 control-label"></label>
         <label class="col-xs-2 control-label">退款金额</label>
         <div class="col-xs-6" >
-            <input class="form-control" ng-model="obj.back_price">
+            <input type="number" class="form-control" ng-model="obj.back_price">
         </div>
     </div>
     
