--- a/app/15custservice/user/edituserinfo.html
+++ b/app/15custservice/user/edituserinfo.html
@@ -1,6 +1,13 @@
-<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+<div class="modal-header">
+    <h4 class="modal-title">编辑用户信息</h4>
+</div>
+
+
+<div class="modal-body">
+	<div class="container-fluid form-horizontal">
 	
 	<div class="form-group">
+		<label class="col-xs-1 control-label"></label>
 		<label class="col-xs-2 control-label">用户名</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入用户名"
@@ -10,6 +17,7 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-xs-1 control-label"></label>
 		<label class="col-xs-2 control-label">地址</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入地址"
@@ -27,6 +35,7 @@
     </button><br>
 
 	<div class="form-group">
+		<label class="col-xs-1 control-label"></label>
 		<label class="col-xs-2 control-label">政府补贴</label>
 		<div class="col-xs-6">
 			<div class="input-group">
@@ -39,6 +48,7 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-xs-1 control-label"></label>
 		<label class="col-xs-2 control-label">慧鼎补贴</label>
 		<div class="col-xs-6">
 			<div class="input-group">
@@ -60,5 +70,5 @@
     提交
     </button>
 
-
+    </div>
 </div>
