'修改客服查看票信息'

--- a/app/15custservice/user/infoticket.html
+++ b/app/15custservice/user/infoticket.html
@@ -31,7 +31,7 @@
         <td class="text-center">{{obj.usedname}}</td>
         <td class="text-center">{{obj.ticket_out_time}}</td>
         <td class="text-center">
-        	<a ng-show="obj.used == '0'" ng-click="destory(obj.id)" class="btn btn-success btn-xs">销票</a>
+        	<a ng-show="obj.used == '0'" ng-click="destory(obj.code)" class="btn btn-success btn-xs">销票</a>
         </td>
       </tr>
     </tbody>
